--- a/.github/actions/build-packages/action.yml
+++ b/.github/actions/build-packages/action.yml
@@ -126,7 +126,6 @@ runs:
         full_patterns="$(echo '${{ inputs.package-name-patterns }}' | \
           tr '\n' ' ' | tr -s ' ' | \
           sed 's/[[:space:]]/\", \"/')"
-        echo "package-name-patterns="[\"${full_patterns}\"]"" \
+        echo "package-name-patterns="[\"${full_patterns// }\"]"" \
           >> $GITHUB_OUTPUT
-        echo "package-name-patterns="[\"${full_patterns// }\"]""
       shell: bash
