Testibg release workflow before merging to default branch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,6 +86,7 @@ jobs:
           gh release upload v${{ inputs.version }} \
             ${{ env.assets-patterns }} --clobber
         env:
+          GH_TOKEN: ${{ github.token }}
           assets-patterns: |-
             ${{ format('{0}/{{{1}}}', env.ASSETS_DIR,
             join(fromJSON(needs.build-pipeline.outputs.package-name-patterns),
