--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: release-pipeline
 run-name: >
-  Run ${{ github.run_number }}: ${{ github.event_name }} 
+  Run ${{ github.run_number }}: ${{ github.event_name }}
   on ${{ github.ref_name }} by ${{ github.actor }}
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
       version:
         description: 'Release version'
