--- a/hello-app/pyproject.toml
+++ b/hello-app/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 ]
 description = "A simple flask web app"
 readme = "README.md"
+license = {text = "MIT License"}
 requires-python = ">=3.10"
 dependencies = [
     "flask",
